# qt_practice

./: CMakeLists.txt  Counter.cpp  Counter.h  MyButtonWidget.cpp  MyButtonWidget.h  MyLabelWidget.cpp  MyLabelWidget.h  dialog.cpp  dialog.h  main.cpp  window.cpp  window.h
libs/Qt5/: Qt5Core.prl  Qt5Gui.prl  Qt5Widgets.prl  libQt5Core.la  libQt5Core.prl  libQt5Gui.la  libQt5Gui.prl
